--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* General */
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -21,6 +22,7 @@
   .inactive{
     display: none;
   }
+  /* Nabvar General */
   .menu {
     display: none;
   }
@@ -78,6 +80,7 @@
     justify-content: center;
     align-items: center;
   }
+  /* Menu en desktop */
   .desktop-menu {
     position: absolute;
     background-color: var(--white);
@@ -115,6 +118,38 @@
     margin-bottom: 20px;
     display: inline-block;
   }
+  /* Menu en mobile */
+  .mobile-menu {
+    padding: 24px;
+    position: absolute;
+    top: 60px;
+
+  }
+  .mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+  }
+  .mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+  }
+  .mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+  }
+  .mobile-menu ul li {
+    margin-bottom: 24px;
+  }
+  .email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+  }
+  .sign-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+  }
   @media (max-width: 640px) {
     .menu {
       display: block;
@@ -125,4 +160,13 @@
     .navbar-email {
       display: none;
     }
+    .desktop-menu{
+      display: none;
+    }
+  }
+  @media (min-width: 641px) {
+    .mobile-menu{
+      display: none;
+    }
+  
   }
